2005-11-16  Zoltan Varga  <vargaz@gmail.com>

	* reflection.c (create_dynamic_mono_image): Set md_version_minor to
	the correct value.

2005-11-15  Martin Baulig  <martin@ximian.com>

	* object.c (set_value): Use mono_class_from_mono_type() instead of
	the hack for generic instances; fixes #76136.

2005-11-15  Zoltan Varga  <vargaz@gmail.com>

	* metadata-internals.h (_MonoImage): Add 'md_version_major/minor'
	fields.

	* image.c (load_metadata_ptrs): Initialize the new fields.

	* reflection.c (create_dynamic_mono_image): Ditto.

	* reflection.c (build_compressed_metadata): Use the new fields.

	* icall.c (ves_icall_System_Reflection_Module_get_MDStreamVersion): New
	icall.

	* icall.c (mono_assembly_icalls): Remove obsolete get_MetadataToken
	icall.
	
2005-11-15  Ankit Jain  <jankit@novell.com>
	    Raja R Harinath  <harinath@gmail.com>

	* class-internals.h (_MonoGenericContainer.types): New. Cache for MonoTypes.
	* metadata.c (mono_type_create_from_typespec_full): Use MonoType from the
	new per-generic_container cache if the cached MonoType's context matches
	the current context.
	  (has_same_context): New. Check if the VARs or MVARs in a GENERIC_INST refer
	to the expected context.
	  (unwrap_arrays): New. Get the element MonoType for an ARRAY/SZARRAY.

2005-11-14  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* appdomain.c: Update MONO_CORLIB_VERSION to 42, since
	we changed the signature of an icall.
	* icall.c: Modify to mono_double_ParseImpl return true/false 
	depending on the success, instead of throwing the exception. This will
	help us in Double.TryParse methods.
	
2005-11-14  Zoltan Varga  <vargaz@gmail.com>

	* marshal.c (emit_marshal_object): Throw an exception when
	marshalling 'object' instead of crashing. Fixes #76696.

2005-11-11  Zoltan Varga  <vargaz@gmail.com>

	* class-internals.h: Add prototype for mono_type_get_full_name ().

2005-11-11  Dick Porter  <dick@ximian.com>

	* threads.c (mono_thread_manage): Make sure the main thread has